--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@
 
 ## 
 *.src
+*.sqlite3
 public/
-public/
+design/
 
 ## DevEnv
-LEIA-ME_ENV-DEV
-cores.txt
+TODO
 
 ## generic files to ignore
 *~
