--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
-Django==1.10.1
+Django==1.10.2
+django-appconf==1.0.2
+django-compressor==2.1
 django-crispy-forms==1.6.0
+django-debug-toolbar==1.6
 django-markdown-deux==1.0.5
 django-pagedown==0.1.1
 markdown2==2.3.1
 Pillow==3.3.1
 psycopg2==2.6.2
+python-memcached==1.58
+rcssmin==1.0.6
+rjsmin==1.0.12
+six==1.10.0
+sqlparse==0.2.1
 urwid==1.3.1
