--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ itsdangerous==0.24
 markdown2==2.3.1
 MarkupSafe==0.23
 model-mommy==1.3.0
+mysqlclient==1.3.7
 Pillow==3.3.1
-psycopg2==2.6.2
 py==1.4.31
 pytest==3.0.3
 pytest-cov==2.4.0
