--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,12 @@ django-crispy-forms==1.6.0
 django-debug-toolbar==1.6
 django-markdown-deux==1.0.5
 django-pagedown==0.1.1
-itsdangerous==0.24
 markdown2==2.3.1
 MarkupSafe==0.23
 model-mommy==1.3.0
-mysqlclient==1.3.7
 Pillow==3.3.1
+psycopg2==2.6.2
 py==1.4.31
-pytest==3.0.3
-pytest-cov==2.4.0
-pytest-django==3.0.0
 python-memcached==1.58
 rcssmin==1.0.6
 rjsmin==1.0.12
