--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-crispy-forms==1.6.0
 django-debug-toolbar==1.6
 django-markdown-deux==1.0.5
 django-pagedown==0.1.1
+gunicorn==19.6.0
 markdown2==2.3.1
 MarkupSafe==0.23
 model-mommy==1.3.0
